<resources>
    <string name="app_name">RideShareApp</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="create_ride2">Create ride</string>
    <string name="special_message_to_the_driver">Special Message to the driver</string>
    <string name="amount">Amount</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
</resources>