<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border4"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="15dp"
            android:gravity="end"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:paddingBottom="20dp"
                android:paddingStart="20dp"/>
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="15dp"
                android:gravity="center"
                android:text="This trip"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/close_ride"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:paddingBottom="20dp"
                android:paddingStart="20dp"
                android:src="@drawable/ic_baseline_close_24" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:text="@string/from"
                android:lines="1"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/from_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="15dp"
                android:layout_weight="1"
                android:inputType="text"
                android:lines="1"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:text="@string/to"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/to_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:layout_weight="1"
                android:inputType="text"
                android:lines="1"
                android:paddingVertical="15dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:paddingEnd="15dp"
                android:src="@drawable/ic_money" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border2"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/minus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:src="@drawable/ic_baseline_horizontal_rule_24" />

                <TextView
                    android:id="@+id/price_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:paddingVertical="15dp"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/plus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:src="@drawable/ic_baseline_add_24" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:layout_marginStart="52dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/line" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:paddingVertical="12dp"
                android:paddingEnd="15dp"
                android:src="@drawable/ic_baseline_chat_24" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/special_message_to_the_driver"
                    android:paddingVertical="15dp"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/border3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/create_ride2"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>